@@ -33,9 +33,10 @@ Stratification is possible, allowing for different baseline hazards in different
 
 Prediction from the fitted model object (using the \code{predict} method) with \code{type="response"} will predict on the 
 survivor function scale. This requires evaluation times to be provided as well as covariates (see example). Also see example code
-below for extracting the cumulative baseline hazard/survival directly. Martingale or deviance 
-residuals can be extracted. The \code{fitted.values} stored in the model object are survival function estimates for each 
-subject at their event/censoring time. 
+below for extracting the cumulative baseline hazard/survival directly. The \code{fitted.values} stored in the model object are
+survival function estimates for each subject at their event/censoring time.
+
+\code{deviance},\code{martingale},\code{score}, or \code{schoenfeld} residuals can be extracted. See Klein amd Moeschberger (2003) for descriptions. The score residuals are returned as a matrix of the same dimension as the model matrix, with a \code{"terms"} attribute, which is a list indicating which model matrix columns belong to which model terms. The score residuals are scaled. For parameteric terms this is by the standard deviation of associated model coefficient. For smooth terms the sub matrix of score residuals for the term is postmultiplied by the transposed Cholesky factor of the covariance matrix for the term's coefficients. This is a transformation that makes the coefficients approximately independent, as required to make plots of the score residuals against event time interpretable for checking the proportional hazards assumption (see  Klein amd Moeschberger, 2003, p376). Penalization causes drift in the score residuals, which is also removed, to allow the residuals to be approximately interpreted as unpenalized score residuals. Schoenfeld and score residuals are computed by strata. See the examples for simple PH assuption checks by plotting score residuals, and Klein amd Moeschberger (2003, section 11.4) for details. Note that high correlation between terms can undermine these checks.  
 
 Estimation of model coefficients is by maximising the log-partial likelihood penalized by the smoothing penalties. See e.g. 
 Hastie and Tibshirani, 1990, section 8.3. for the partial likelihood used (with Peto's approximation for ties), but note that 
@@ -97,20 +98,43 @@ lines(b$family$data$tr,exp(-b$family$data$h + 2*b$family$data$q^.5),col=2)
 lines(b$family$data$tr,exp(-b$family$data$h - 2*b$family$data$q^.5),col=2)
 lines(b$family$data$tr,exp(-b$family$data$km),lty=2) ## Kaplan Meier
 
+## Checking the proportional hazards assumption via scaled score plots as
+## in Klein and Moeschberger Section 11.4 p374-376... 
+
+ph.resid <- function(b,stratum=1) {
+## convenience function to plot scaled score residuals against time,
+## by term. Reference lines at 5% exceedance prob for Brownian bridge
+## (see KS test statistic distribution).
+  rs <- residuals(b,"score");term <- attr(rs,"term")
+  if (is.matrix(b$y)) {
+    ii <- b$y[,2] == stratum;b$y <- b$y[ii,1];rs <- rs[ii,]
+  }
+  oy <- order(b$y)
+  for (i in 1:length(term)) {
+    ii <- term[[i]]; m <- length(ii)
+    plot(b$y[oy],rs[oy,ii[1]],ylim=c(-3,3),type="l",ylab="score residuals",
+         xlab="time",main=names(term)[i])
+    if (m>1) for (k in 2:m) lines(b$y[oy],rs[oy,ii[k]],col=k);
+    abline(-1.3581,0,lty=2);abline(1.3581,0,lty=2) 
+  }  
+}
+par(mfrow=c(2,2))
+ph.resid(b)
+
 ## stratification example, with 2 randomly allocated strata
 ## so that results should be similar to previous....
 col1$strata <- sample(1:2,nrow(col1),replace=TRUE) 
-bs <- gam(cbind(time,strata)~s(age,by=sex)+sex+s(nodes)+perfor+rx+obstruct+adhere,
-         family=cox.ph(),data=col1,weights=status)
+bs <- gam(cbind(time,strata)~s(age,by=sex)+sex+s(nodes)+perfor+rx+obstruct
+          +adhere,family=cox.ph(),data=col1,weights=status)
 plot(bs,pages=1,all.terms=TRUE) ## plot effects
 
 ## baseline survival plots by strata...
 
 for (i in 1:2) { ## loop over strata
-## create index picking out elements of stored hazard info for this stratum...
+## create index selecting elements of stored hazard info for stratum i...
 ind <- which(bs$family$data$tr.strat == i)
-if (i==1) plot(bs$family$data$tr[ind],exp(-bs$family$data$h[ind]),type="l",ylim=c(0,1),
-     xlab="time",ylab="survival",lwd=2,col=i) else
+if (i==1) plot(bs$family$data$tr[ind],exp(-bs$family$data$h[ind]),type="l",
+      ylim=c(0,1),xlab="time",ylab="survival",lwd=2,col=i) else
       lines(bs$family$data$tr[ind],exp(-bs$family$data$h[ind]),lwd=2,col=i)
 lines(bs$family$data$tr[ind],exp(-bs$family$data$h[ind] +
       2*bs$family$data$q[ind]^.5),lty=2,col=i) ## upper ci
@@ -122,7 +146,7 @@ lines(bs$family$data$tr[ind],exp(-bs$family$data$km[ind]),col=i) ## KM
 
 ## Simple simulated known truth example...
 ph.weibull.sim <- function(eta,gamma=1,h0=.01,t1=100) { 
-  lambda <- h0*exp(eta)
+  lambda <- h0*exp(eta) 
   n <- length(eta)
   U <- runif(n)
   t <- (-log(U)/lambda)^(1/gamma)
@@ -137,7 +161,7 @@ f0 <- function(x) 2 * sin(pi * x)
 f1 <- function(x) exp(2 * x)
 f2 <- function(x) 0.2*x^11*(10*(1-x))^6+10*(10*x)^3*(1-x)^10
 f3 <- function(x) 0*x
-f <- f0(x0) + f1(x1) + f2(x2)
+f <- f0(x0) + f1(x1)  + f2(x2)
 g <- (f-mean(f))/5
 surv <- ph.weibull.sim(g)
 surv$x0 <- x0;surv$x1 <- x1;surv$x2 <- x2;surv$x3 <- x3
@@ -145,6 +169,28 @@ surv$x0 <- x0;surv$x1 <- x1;surv$x2 <- x2;surv$x3 <- x3
 b <- gam(t~s(x0)+s(x1)+s(x2,k=15)+s(x3),family=cox.ph,weights=d,data=surv)
 
 plot(b,pages=1)
+
+## Another one, including a violation of proportional hazards for
+## effect of x2...
+
+set.seed(2)
+h <- exp((f0(x0)+f1(x1)+f2(x2)-10)/5)
+t <- rexp(n,h);d <- as.numeric(t<20)
+
+## first with no violation of PH in the simulation...
+b <- gam(t~s(x0)+s(x1)+s(x2)+s(x3),family=cox.ph,weights=d)
+plot(b,pages=1)
+ph.resid(b) ## fine
+
+## Now violate PH for x2 in the simulation...
+ii <- t>1.5
+h1 <- exp((f0(x0)+f1(x1)+3*f2(x2)-10)/5)
+t[ii] <- 1.5 + rexp(sum(ii),h1[ii]);d <- as.numeric(t<20)
+
+b <- gam(t~s(x0)+s(x1)+s(x2)+s(x3),family=cox.ph,weights=d)
+plot(b,pages=1)
+ph.resid(b) ## The checking plot picks up the problem in s(x2) 
+
 
 ## conditional logistic regression models are often estimated using the 
 ## cox proportional hazards partial likelihood with a strata for each
